# swift_gazelle_plugin

./: .bazelrc  .bazelrc.ci  .bazelrc.shared  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  do_renovate_post_upgrade  go.mod  go.sum  go_deps.bzl
.bcr/: metadata.template.json  source.template.json
.github/: renovate.json
.github/actions/execute_integration_test/: action.yml
.github/actions/execute_test/: action.yml
.github/actions/set_up_macos/: action.yml
.github/actions/set_up_ubuntu/: action.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  publish_to_bcr.yml
bzlmod/: BUILD.bazel  e2e_test_runner.sh
bzlmod/workspace/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  do_test
bzlmod/workspace/Sources/MyExecutable/: BUILD.bazel
bzlmod/workspace/Sources/System/: BUILD.bazel
ci/: BUILD.bazel
ci/internal/: ci_test_params.bzl
examples/: BUILD.bazel  example_infos.bzl  test_runner.sh
examples/bzlmod/: BUILD.bazel  MODULE.bazel  do_test
examples/bzlmod/Sources/System/: BUILD.bazel  System.swift
examples/custom_swift_proto_compiler/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  do_test
examples/custom_swift_proto_compiler/compiler/: BUILD.bazel
examples/custom_swift_proto_compiler/protos/: BUILD.bazel
examples/custom_swift_proto_compiler/rules/: BUILD.bazel  custom_proto_compiler.sh  custom_swift_proto_compiler.bzl
examples/grpc_example/: .bazelrc  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift
examples/grpc_example/compilers/: BUILD.bazel  swift_proto_compiler_macros.bzl
examples/grpc_example/protos/echo_service/: BUILD.bazel
examples/grpc_example/protos/echo_service/requests/: BUILD.bazel
examples/grpc_example/protos/echo_service/responses/: BUILD.bazel
examples/grpc_example/sources/client/: BUILD.bazel  client_main.swift
examples/grpc_example/sources/server/: BUILD.bazel  server_main.swift
examples/grpc_example/sources/test/: BUILD.bazel  client_unit_test.swift
examples/grpc_package_example/: BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift
examples/grpc_package_example/compilers/: swift_proto_compiler_macros.bzl
examples/grpc_package_example/protos/echo_service/: BUILD.bazel
examples/grpc_package_example/sources/client/: BUILD.bazel  client_main.swift
examples/grpc_package_example/sources/server/: BUILD.bazel  server_main.swift
examples/grpc_package_example/sources/test/: BUILD.bazel  client_unit_test.swift
examples/simple/: BUILD.bazel  MODULE.bazel
examples/simple/Sources/MyExecutable/: BUILD.bazel  MyExecutable.swift
examples/simple/Sources/MyLibrary/: BUILD.bazel
examples/simple/Tests/MyLibraryTests/: BUILD.bazel  WorldTests.swift
gazelle/: BUILD.bazel  config.go  doc.go  generate.go  kinds.go  lang.go  resolve.go
gazelle/internal/jsonutils/: BUILD.bazel  errors_test.go  json_map_test.go  json_slice_test.go
gazelle/internal/pathdistance/: BUILD.bazel  pathdistance_test.go
gazelle/internal/reslog/: BUILD.bazel  resolution_logger_test.go  rule_resolution.go  rule_resolution_summary.go  rule_resolution_test.go
gazelle/internal/spdesc/: BUILD.bazel  manifest_test.go
gazelle/internal/spdump/: BUILD.bazel  dependency.go  manifest_test.go  target.go  target_dependency.go  target_dependency_test.go  target_test.go
gazelle/internal/spreso/: BUILD.bazel  package_reference_test.go  pin.go  pin_store_v1_test.go  pin_store_v2_test.go  pin_test.go
gazelle/internal/stringslices/: BUILD.bazel  map_test.go
gazelle/internal/swift/: BUILD.bazel  bazel_label.go  bazel_label_test.go  bazel_repo.go  bazel_repo_name_test.go  bzlmod.go  bzlmod_test.go  code_dir_test.go  dependency_index_test.go  files_test.go  http_archive.go  http_archive_test.go  imports_test.go  is_builtin_module_test.go  label_str_test.go  module.go  module_dir.go  module_dir_test.go  module_index_test.go  module_name_test.go  module_test.go  module_to_products_index_test.go  package.go  package_test.go  packages_index_test.go  patch_test.go  product.go  product_index_test.go  product_memberships_index_test.go  product_test.go  repo_rule_from_bazel_repo.go  repo_rule_from_bazel_repo_test.go  rule_kinds_test.go  rules_common.go  rules_common_test.go  rules_from_protos.go  rules_from_srcs.go  rules_from_srcs_test.go
gazelle/internal/swiftbin/: BUILD.bazel  swift_bin_test.go
gazelle/internal/swiftcfg/: BUILD.bazel  module_files_collector_test.go  swift_config.go  swift_config_test.go
gazelle/internal/swiftpkg/: BUILD.bazel  dependency.go  dependency_test.go  module_type_test.go  package_info.go  package_info_test.go  platform.go  product.go  product_test.go  source_type_test.go  swift_file_info_test.go  target.go  target_dependency.go  target_test.go
gazelle/internal/updmarker/: BUILD.bazel  updater_test.go
release/: BUILD.bazel  archive_test_runner.sh
tools/generate_ci_workflow/: BUILD.bazel  main.go
tools/generate_ci_workflow/internal/github/: BUILD.bazel  workflow_test.go
tools/generate_ci_workflow/internal/testparams/: BUILD.bazel  int_test_params.go  int_test_params_test.go
tools/update_go_repos/: BUILD.bazel  main.go
