module(
    name = "swift_gazelle_plugin",
    version = "0.0.0",
)

# MARK: - Runtime Dependencies

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.21.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_go", version = "0.47.0")
bazel_dep(name = "gazelle", version = "0.38.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_deckarep_golang_set_v2",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
    "org_golang_x_exp",
    "org_golang_x_text",
)

# MARK: - Dev Dependencies

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.14.1",
    dev_dependency = True,
)
bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.4.1",
    dev_dependency = True,
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version_file = "//:.bazelversion")
use_repo(bazel_binaries, "bazel_binaries")
