"""
Example module for grpc + proto target generation.
"""

bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.0.0",
)
local_path_override(
    module_name = "swift_gazelle_plugin",
    path = "../..",
)

bazel_dep(name = "rules_swift_package_manager", version = "1.8.0")
bazel_dep(name = "cgrindel_bazel_starlib", version = "0.27.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# The apple_support bazel_dep must come before the rules_cc.
# https://github.com/bazelbuild/apple_support#incompatible-toolchain-resolution
bazel_dep(name = "apple_support", version = "1.23.1")
bazel_dep(
    name = "rules_swift",
    version = "3.1.2",
)
bazel_dep(
    name = "rules_apple",
    version = "4.2.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.8.2",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.45.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)

bazel_dep(name = "rules_proto", version = "7.1.0")

# Gazelle currently needs protobuf to be named com_google_protobuf.
# If they fix this, we can remove the repo_name argument.
bazel_dep(name = "protobuf", version = "32.1", repo_name = "com_google_protobuf")

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_grpc_swift",
    "swiftpkg_swift_nio",
    "swiftpkg_swift_protobuf",
)
# swift_deps END
