bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.0.0",
)
local_path_override(
    module_name = "swift_gazelle_plugin",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.21.0")
bazel_dep(
    name = "rules_swift",
    version = "2.2.2",
    repo_name = "build_bazel_rules_swift",
)

# Dev Dependencies

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.39.1",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
