bazel_dep(
    name = "swift_gazelle_plugin",
    version = "0.0.0",
)
local_path_override(
    module_name = "swift_gazelle_plugin",
    path = "../..",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.27.0")

# The apple_support bazel_dep must come before the rules_cc.
# https://github.com/bazelbuild/apple_support#incompatible-toolchain-resolution
bazel_dep(name = "apple_support", version = "1.24.3")
bazel_dep(
    name = "rules_swift",
    version = "3.1.2",
    repo_name = "build_bazel_rules_swift",
)

apple_cc_configure = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
)
use_repo(apple_cc_configure, "local_config_apple_cc")

# Dev Dependencies

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.8.2",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.46.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)
