load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "custom_proto_compiler",
    srcs = ["custom_proto_compiler.sh"],
    visibility = ["//rules:__subpackages__"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

bzl_library(
    name = "custom_swift_proto_compiler",
    srcs = ["custom_swift_proto_compiler.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//lib:paths"],
)
