load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stringslices",
    srcs = [
        "doc.go",
        "map.go",
    ],
    importpath = "github.com/cgrindel/swift_gazelle_plugin/gazelle/internal/stringslices",
    visibility = ["//gazelle:go_packages"],
)

go_test(
    name = "stringslices_test",
    srcs = ["map_test.go"],
    deps = [
        ":stringslices",
        "@com_github_stretchr_testify//assert",
    ],
)

bzlformat_pkg(name = "bzlformat")

# MARK: - Integration Test

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
