load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "server",
    srcs = ["server_main.swift"],
    module_name = "Server",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/echo_service:echo_service_swift_server_proto",
        "//protos/echo_service/requests:echo_request_swift_proto",
        "//protos/echo_service/responses:echo_response_swift_proto",
        "@swiftpkg_grpc_swift//:GRPC",
        "@swiftpkg_swift_nio//:NIOPosix",
    ],
)
