load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "client",
    srcs = ["client_main.swift"],
    module_name = "Client",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/echo_service:echo_service_swift_client_proto",
        "@swiftpkg_grpc_swift_2//:GRPCCore",
        "@swiftpkg_grpc_swift_nio_transport//:GRPCNIOTransportHTTP2",
        "@swiftpkg_swift_protobuf//:SwiftProtobuf",
    ],
)
