load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "server",
    srcs = ["server_main.swift"],
    module_name = "Server",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/echo_service:echo_service_swift_server_proto",
        "@swiftpkg_grpc_swift_2//:GRPCCore",
        "@swiftpkg_grpc_swift_nio_transport//:GRPCNIOTransportHTTP2",
    ],
)
