load("@rules_swift//swift:swift_test.bzl", "swift_test")

swift_test(
    name = "test",
    srcs = [
        "client_unit_test.swift",
    ],
    module_name = "Test",
    deps = [
        "//protos/echo_service:echo_service_swift_client_proto",
        "//protos/echo_service:echo_service_swift_server_proto",
        "@swiftpkg_grpc_swift_2//:GRPCInProcessTransport",
    ],
)
