load("@cgrindel_bazel_starlib//bzlformat:defs.bzl", "bzlformat_pkg")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "github",
    srcs = ["workflow.go"],
    importpath = "github.com/cgrindel/swift_gazelle_plugin/tools/generate_ci_workflow/internal/github",
    visibility = ["//tools/generate_ci_workflow:__subpackages__"],
    deps = [
        "@com_github_creasty_defaults//:defaults",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "github_test",
    srcs = ["workflow_test.go"],
    deps = [
        "//tools/generate_ci_workflow/internal/github",
        "@com_github_stretchr_testify//assert",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

bzlformat_pkg(name = "bzlformat")
